--- a/BikeRentalService/BikeRentalService/Properties/launchSettings.json
+++ b/BikeRentalService/BikeRentalService/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     "BikeRentalService": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
